# RBC3D

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  Makefile.in  Makefile2.in  Makefile3.in  README.md  README2.md  _typos.toml  citation.cff  commands.sh  format.sh  petsc_include.h  rbc.sh  recurse.sh
.github/scripts/: _typos.toml  format.sh  spelling.sh  submit.sh
.github/workflows/: ice.yml  ice2.yml  mac.yml  phoenix.yml  pretty.yml  spelling.yml  test.yml  test2.yml
case/: Makefile  Makefile.bak  README.md  initcond.F90  medianTimes.py  run.sbatch  run.sh  run2.sh  tags  tube.F90
case/Input/: mem.in  tube.in
case1wbc/: initcond.F90
case_different_celltypes/: initcond.F90  tube.F90
case_different_celltypes/Input/: cylinder.jou  cylinder_D_3.5_L_13.06.g  cylinder_D_6.0_L_13.33.g  tube.in
case_subrahmanyam/: Makefile  continue.sbatch  field.F90  initcond_margination.F90  initcond_valve.F90  run.sbatch  tube.F90
case_subrahmanyam/Input/: bridge.e  sphere_R1.e  tube.in
case_wbcs/: Makefile  README.md
common/: .depend  CMakeLists.txt  Makefile  ModBasicMath.F90  ModConf.F90  ModData.F90  ModDataStruct.F90  ModDataTypes.F90  ModElectSolver.F90  ModEwaldFunc.F90  ModFFT.F90  ModHashTable.F90  ModIO.F90  ModIntOnRbcs.F90  ModIntOnWalls.F90  ModNoSlip.F90  ModPFFTW.F90  ModPME.F90  ModPolarPatch.F90  ModPolyRoots.F90  ModPolyRoots.f90  ModPostProcess.F90  ModQuadRule.F90  ModRbc.F90  ModRbcSingInt.F90  ModRepulsion.F90  ModSourceList.F90  ModSphpk.F90  ModSpline.F90  ModTargetList.F90  ModTimeInt.F90  ModVelSolver.F90  ModWall.F90  tags
contributing/: guide.md
docs/: clusters.md  visualization.md
examples/: Makefile.lapack  README.md
examples/carotid_web/: Makefile  carotid_initcond.F90  init.sbatch  initcond.F90  run.sbatch  tube.F90
examples/case/: CMakeLists.txt  Makefile  field.F90  initcond.F90  medianTimes.py  run.sh  tube.F90
examples/case/Input/: tube.in
examples/case1wbc/: initcond.F90  run.sh  tube.F90
examples/case_diff_celltypes/: Makefile  initcond.F90  tube.F90
examples/case_exleukocytes/: initcond.F90
examples/case_rbcs/: Makefile  initcond.F90  run.sh
examples/case_rwbcs/: initcond.F90
examples/case_sickles/: Makefile
examples/case_wbcs/: field.F90  initcond.F90  run.sh  run2.sh  tube.F90  v.g
examples/case_wbcs2/: tube.F90  v.f
examples/case_wbcs3/: initcond.F90
examples/case_wbcs4/: initcond.F90  tube.F90
examples/case_wbcsog/: Makefile
examples/cutout/: cinit.F90  cinit2.F90  ctube.F90
examples/field_visual/: Makefile  README.md  field.F90  loop.py  traction.F90
examples/minicase/: init2.F90  minit.F90  mtube.F90  tube2.F90
examples/plates/: pinit.F90  ptube.F90
examples/random_case_rbc/: initcond.F90  initcond_random  tube.F90
examples/random_case_wbc/: initcond.F90  initcond_random.F90  tube.F90
examples/randomized_case/: Makefile  initcond.F90  initcond_random  initcond_random.F90  random_initcond.F90  tube.F90
examples/randomized_case2/: initcond_random  initcond_random.F90
examples/spherocytes/: sphere_init.F90  sphere_init2.F90  sphere_tube.F90
examples/velocity_field/: field.F90
install/: clusters.md  cmake.sh  format.sh  install-ice.sh  install-lapack.sh  install-mac.sh  install-makedepf90.sh  install-ml-petsc.sh  install-no-petsc.sh  install-phoenix.sh  install-with-lapack.sh  install-with-mkl.sh  install.sh  instructions_2023.md  new.sh  phoenix-modules.sh  readme.md  visualization.md
install/old/: deprecated-install.md
install/py_scripts/: petsc_configure.py
install/scripts/: Makefile  make.inc  mdf90_replace.py  module_netcdf_nc_data.F90  module_typesizes.F90  netcdf.F90  netcdf_replace.py  petsc_configure.py
mycases/case/: field.F90  field.sh  initcond.F90  run.sh
mycases/case1wbc/: run2.sh
mycases/case_exleukocytes/: tube.F90
mycases/case_perturbations/: initcond.F90  run.sh
mycases/case_platelets/: Makefile  field.F90  initcond.F90  run.sh  run2.sh  tube.F90
mycases/case_rwbcs/: initcond.F90  tube.F90
mycases/case_squeeze/: initcond.F90  run.sh
mycases/case_squeeze10/: initcond.F90  run.sh  tube.F90
mycases/case_squeeze11/: initcond.F90  run.sh
mycases/case_squeeze12/: initcond.F90  run.sh  tube.F90
mycases/case_squeeze2/: run.sh
mycases/case_squeeze3/: initcond.F90  run.sh  tube.F90
mycases/case_squeeze4/: initcond.F90  run.sh
mycases/case_squeeze5/: initcond.F90  run.sh
mycases/case_squeeze6/: initcond.F90  run.sh
mycases/case_squeeze7/: run.sh  tube.F90
mycases/case_squeeze8/: initcond.F90  run.sh  tube.F90
mycases/case_squeeze9/: initcond.F90  run.sh
mycases/case_wbcs/: field.F90  fieldold.F90  init.sh  initcond.F90  run.sh  run2.sh  tube.F90
mycases/case_wbcs1/: field.F90  initcond.F90  run.sh  tube.F90
mycases/case_wbcs2/: medianTimes.py  run.sh  run2.sh
mycases/case_wbcs3/: run.sh  run2.sh
mycases/case_wbcs4/: initcond.F90  run.sh  run2.sh
mycases/case_wbcs5/: field.F90  initcond.F90  run.sh  run2.sh  tube.F90
mycases/case_wbcsog/: initcond.F90  run.sh  run2.sh
mycases/random_case/: initcond.F90  run.sh  run2.sh  tube.F90
mycases/random_case_rbc/: initcond.F90  run.sh
mycases/random_case_wbc/: initcond_random.F90  run.sh
mycases/randomcase2/: initcond.F90  run.sh  run2.sh  run3.sbatch  run3.sh  tube.F90
mycases/randomcasep/: initcond.F90  run.sh  run3.sbatch  tube.F90
mycases/randomized_case/: init.sbatch  initcond.F90  run.sbatch  run2.sh  run3.sh  transfer.sh  tube.F90
mycases/randomized_case2/: Makefile  run.sh  run2.sh
mycases/test_math/: Makefile  test.F90  test2.F90
mycases/velocity_field/: Makefile  README.md  field.F90  traction.F90
mylib/include/: f77_lapack.mod  f95_lapack.mod  la_auxmod.mod  la_precision.mod  netcdf.mod  typesizes.mod
mylib/lib/: libnetcdf.la  libnetcdf_c++.la
ogpackages/mkl-licenses/: l_GVJ78MLJ.lic
randomized_case/: Makefile  initcond_random.F90  tube.F90
sample_files/: README.md
sample_files/sample_cells/: README.md
sample_files/sample_walls/: README.md
scripts/: format.sh
testcases/bifurc/: Makefile  initcond.F90  run.sh  (+3 more)
(+96 files in other folders)
